[package]
name = "an-operating-system-in-rust"
version = "0.1.0"
authors = ["Tomoya Tabuchi <t@tomoyat1.com>"]
edition = "2021"

[[bin]]
name = "aosir"
path = "src/main.rs"


[dependencies]
rlibc = "1.0"
uefi = "=0.29.0"
bootlib = { path = "./bootlib" }
spin = "0.10.0"

[workspace]
members = [
    "bootloader",
    "bootlib",
]

[profile.dev]
debug = true
strip = "none"
