[package]
name = "an-operating-system-in-rust"
version = "0.1.0"
authors = ["Tomoya Tabuchi <t@tomoyat1.com>"]
edition = "2021"

[[bin]]
name = "aosir"
path = "src/main.rs"


[dependencies]
rlibc = "1.0"
uefi = "=0.29.0"
bootlib = { path = "./bootlib" }
paging = { path = "./paging" }
x86_64 = { path = "./arch/x86_64" }
native = { path = "./arch/x86_64/native" }
spin = "0.10.0"
interface = { path = "./arch/interface" }

[workspace]
members = ["bootloader", "bootlib", "paging", "arch/x86_64", "arch/x86_64/native", "arch/interface"]

[profile.dev]
debug = true
strip = "none"
