[package]
name = "bootloader"
version = "0.1.0"
authors = ["tomoyat1 <t@tomoyat1.com>"]
edition = "2018"

[[bin]]
name = "bootx64"
path = "src/main.rs"

[dependencies]
log = { version = "0.4", default-features = false }
uefi = { version = "=0.29.0", features = ["global_allocator", "panic_handler"] }
array-macro = "2.1.8"
proc-macro2 = "=1.0.61"
rlibc = "1"
bootlib = { path = "../bootlib" }
